--- a/src/components/Documentation/Documentation.css
+++ b/src/components/Documentation/Documentation.css
@@ -14,7 +14,13 @@ html {
 }
 
 .left {
+  /* display: flex; */
+  /* flex-direction: column; */
   border-right: 2px solid var(--pink);
   border-left: 2px solid var(--pink);
-  padding: 2% 3%;
+  padding: 2% 5%;
+}
+
+.left a{
+  word-break: break-all;
 }
