--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,33 +6,30 @@
   --darkPurple: #553D67;
 }
 
-footer {
+.footer {
   background-color: var(--blue);
   color: var(--pink);
   border-bottom: 5px solid var(--navbar);
   position: absolute;
   bottom: 0;
   width: 100%;
-  /* height: 20px; */
-  /* padding: 2% 0% 2% 0%; */
-  /* margin: 0% auto; */
 }
 
 
-footer ul {
+.footer ul {
   list-style: none;
   display: flex;
   text-align: center;
 }
 
-footer .hero {
+.footer .hero {
   text-align: center;
   font-size: xxx-large;
   flex: 1;
   padding-bottom: 1%;
 }
 
-footer .hero:hover {
+.heroFooter:hover {
   color: white;
 }
 
@@ -44,4 +41,21 @@ footer .hero:hover {
 
 .title:hover {
   color: white;
+}
+
+@media(max-width: 420px) {
+  .footer {
+    flex: 0;
+  }
+
+  .heroFooter {
+    text-align: center;
+    font-size: xxx-large;
+    flex: 0;
+    padding-bottom: 0px;
+  }
+
+  .footer ul {
+    margin: 0px;
+  }
 }
