--- a/src/containers/Admin/UserEdit/UserEdit.css
+++ b/src/containers/Admin/UserEdit/UserEdit.css
@@ -7,7 +7,7 @@
   margin-bottom: 3%;
 }
 
-#edit-form input[type="text"] {
+.editForms input[type="text"] {
   outline: none;
   border-top: none;
   border-left: none;
@@ -16,7 +16,7 @@
   width: 80%;
 }
 
-#edit-form input[type="number"] {
+.editForms input[type="number"] {
   outline: none;
   border-top: none;
   border-left: none;
@@ -25,7 +25,7 @@
   width: 100%;
 }
 
-#edit-form input[type="date"] {
+.editForms input[type="date"] {
   outline: none;
   border-top: none;
   border-left: none;
@@ -34,7 +34,7 @@
   width: 100%;
 }
 
-#edit-form select {
+.editForms select {
   outline: none;
   border-top: none;
   border-left: none;
@@ -82,4 +82,8 @@ input::-webkit-inner-spin-button {
 
 .label {
   width: 40%;
+}
+
+@media(max-width: 420px) {
+  
 }
