--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -22,7 +22,7 @@
   text-align: center;
 }
 
-.footer .hero {
+.heroFooter {
   text-align: center;
   font-size: xxx-large;
   flex: 1;
@@ -42,6 +42,15 @@
 .title:hover {
   color: white;
 }
+
+/* @media(min-width: 421px) {
+  .hero {
+    text-align: center;
+    font-size: xxx-large;
+    flex: 1;
+    padding-bottom: 1%;
+  }
+} */
 
 @media(max-width: 420px) {
   .footer {
