--- a/src/containers/Admin/UserEdit/UserEdit.css
+++ b/src/containers/Admin/UserEdit/UserEdit.css
@@ -7,13 +7,18 @@
   margin-bottom: 3%;
 }
 
+.editForms {
+  width: 80%;
+  margin: auto;
+}
+
 .editForms input[type="text"] {
   outline: none;
   border-top: none;
   border-left: none;
   border-right: none;
   margin: 1% 0%;
-  width: 80%;
+  width: 90%;
 }
 
 .editForms input[type="number"] {
@@ -84,6 +89,23 @@ input::-webkit-inner-spin-button {
   width: 40%;
 }
 
+.labelInfo {
+  width: 60%;
+}
+
 @media(max-width: 420px) {
-  
+  .editForms {
+    width: 100%;
+    margin: auto;
+  }
+
+  .labelInfo ol {
+    padding: 0;
+    margin: 0;
+  }
+
+  .labelInfo ul {
+    padding: 0;
+    margin: 0;
+  }
 }
