--- a/src/containers/User/User.css
+++ b/src/containers/User/User.css
@@ -123,6 +123,13 @@ body {
   color: red;
 }
 
+@media(max-width: 1024px) {
+  .todo {
+    width: 90%;
+    
+  }
+}
+
 @media(max-width: 420px) {
   .todo {
     width: 95%;
@@ -136,3 +143,4 @@ body {
     width: 18%;
   }
 }
+
