--- a/src/components/Documentation/Documentation.css
+++ b/src/components/Documentation/Documentation.css
@@ -25,3 +25,25 @@ html {
   word-break: break-all;
 }
 
+.holder {
+  width: 95%;
+  margin: auto;
+  padding: 2% 0%;
+}
+
+.holder img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.code {
+  background-color: var(--darkBlue);
+  color: var(--pink);
+}
+
+@media(max-width: 420px) {
+  .holder {
+    width: 100%;
+  }
+}
