--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .Footer {
   background-color: #f8f9fa;
-  position: relative;
-  bottom: 0;
+  position: sticky;
+  bottom: 0px;
   width: 100%;
   padding: 1% 2%;
   text-align: center;
