--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  position: absolute;
-  /* height: 100%; */
+  /* position: relative; */
+  /* height: 100vmin; */
 }
 
 code {
