--- a/public/marterial-table.css
+++ b/public/marterial-table.css
@@ -1,87 +1,12 @@
-:root {
-  --heading: #f50057;
-  --header: #ff80ab;
-}
-
-body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
-
-main {
-  flex: 1 0 auto;
-}
-
-/* common */
-
-nav,
-footer {
-  background-color: #e0e0e0 !important;
-}
-
-/* navbar */
-.brand-logo img {
-  position: relative;
-  padding-top: 8%;
-  padding-bottom: 8%;
-}
-
-
-/* card */
-.card-header {
-  margin-bottom: 5%;
-}
-
-.card-title {
-  flex: 1 !important;
-  display: inline-block !important;
-}
-
-
-.actions {
-  display: flex;
-}
 
 .search {
-  display: flex;
+
   border-bottom: 1px solid black;
 }
 
-.input-field {
-  margin: 0 !important;
-  padding-bottom: 2%;
-}
-
-input[type="text"] {
-  border: 0 !important;
-  outline: none !important;
-  margin: 0 !important;
-}
-
-input[type="text"]:focus {
-  border: 0 !important;
-  outline: none !important;
-  margin: 0 !important;
-  box-shadow: none !important;
-}
-
-.btn-floating {
-  background-color: #fff !important;
-}
-
-.btn-floating:hover {
-  background-color: #e0e0e0 !important;
-}
-
-
-/* table */
-
 .table {
   overflow-x: auto;
-  height: 480px;
 }
-
 
 thead tr {
   border-bottom: 0 !important;
@@ -93,161 +18,24 @@ tbody th {
 
 .actions-icons {
   display: flex;
-  flex-wrap: nowrap;
+  justify-content: flex-end;
 }
-
-
-/* pagination */
 
 .whole-pagination {
-  /* padding-top: 15px; */
   display: flex;
-}
-
-.pagination-space {
-  flex: 1;
+  justify-content: flex-end;
+  padding: 0 14px 14px 14px;
+  position: fixed;
+  bottom: 0;
+  z-index: 10;
+  width: 100%;
+  padding-top: 10px;
+  background-color: white;
 }
 
 .pagination-range {
-  flex: 1;
-}
-
-.select-wrapper {
-  padding-top: 10px;
-}
-
-.select-wrapper input.select-dropdown {
-  left: 25%;
-  width: 50% !important;
-  color: black !important;
-  background-color: #f5f5f5 !important;
-  /* padding: 0 5px 0 0 !important; */
-}
-
-.select-wrapper .caret {
-  left: 66% !important;
-  /* color: gray !important; */
-  z-index: 2 !important;
-}
-
-.dropdown-content li>a,
-.dropdown-content li>span {
-  color: #000 !important;
-}
-
-.pagination {
-  /* flex: 1; */
-  display: block;
-  width: 180px !important;
-  margin: auto 0 !important;
-}
-
-.pagination span a {
-  padding: 0 !important;
-  color: gray !important;
-}
-
-/* footer */
-
-.page-footer {
-  color: #000 !important;
-}
-
-i {
-  padding-right: 2%;
-}
-
-i a {
-  padding-bottom: 2%;
-  color: #000 !important;
-}
-
-
-@media(max-width: 555px) {
-
-  table {
-    width: 500px;
-  }
-
-  .actions {
-    width: 60%;
-  }
-
-  .card-header-text {
-    font-size: small;
-  }
-
-  .pagination-space {
-    flex: 0 !important;
-  }
-
-  #row_num .select-wrapper .caret {
-    left: 75% !important;
-  }
-
-}
-
-@media(max-width: 471px) {
-
-  .table {
-    width: 100%;
-  }
-
-  table {
-    width: 500px;
-  }
-
-  
-  
-
-}
-
-.select-wrapper .caret {
-  top: 10px !important;
-}
-
-
-/* dynamic */
-
-[type="checkbox"].filled-in:checked+span:not(.lever):after {
-  border-color: #f50057 !important;
-  background-color: #f50057 !important;
-}
-
-.dropdownBox .select-wrapper input.select-dropdown {
-  width: 100% !important;
-  position: relative;
-  left: 0px !important;
-}
-
-#firstName {
-  border-bottom: 1px solid gray !important;
-}
-
-#lastName {
-  border-bottom: 1px solid gray !important;
-}
-
-#firstName:focus {
-  border-bottom: 1px solid #f50057 !important;
-}
-
-#lastName:focus {
-  border-bottom: 1px solid #f50057 !important;
-}
-
-input[type="number"] {
-  margin: 0 !important;
-  border-bottom: 1px solid gray !important;
-}
-
-input[type="number"]:not(.browser-default):focus {
-  border-bottom: 1px solid #f50057 !important;
-  box-shadow: none !important;
-}
-
-.actions-box {
-  width: 10% !important;
+  width: 10%;
+  margin-right: 30px;
 }
 
 .username-box,
@@ -260,65 +48,56 @@ input[type="number"]:not(.browser-default):focus {
   padding: 0 !important;
 }
 
-.card-header-text {
-  display: flex !important;
-  flex-wrap: nowrap;
-  padding: 0px 15px 10px 15px !important;
-}
-
 .card-header {
-  margin-bottom: 0 !important;
+  display: flex;
+  padding: 14px;
+  position: sticky ;
+  top: 0;
+  left: 0;
+  background-color: white ;
+  padding-bottom: 20px ;
+  padding-top: 10px;
+  z-index: 10;
 }
 
-.card-main-text {
-  padding: 0 24px 10px 24px !important;
+.table {
+  margin-bottom: 30px;
+  padding: 0 14px;
 }
 
-#add-dropdownBox .select-wrapper input.select-dropdown {
-  width: 100% !important;
-  left: 0 !important;
+/* table thead div{
+  position: absolute;
+  width: 100%;
+  top: 60px;
+  left: 0;
+  z-index: 10;
+  padding-bottom: 10px;
+  background-color: blue;
+} */
+
+.card-header-body {
+  display: flex;
 }
 
-#add-dropdownBox .select-wrapper .caret {
-  left: 90% !important;
+.search {
+  display: flex;
 }
 
 th div {
-  display: flex !important;
-  flex-wrap: nowrap !important;
+  display: flex ;
+  flex-wrap: nowrap ;
 }
 
 th div p {
-  padding-right: 10px !important;
-}
-
-#row_num .select-wrapper input.select-dropdown {
-  padding-left: 10% !important;
-}
-
-
-.waves-effect a i img{
-  margin-top: 25px !important;
-}
-
-.container {
-  width: 100% !important;
-}
-
-.add-box {
-  padding-bottom: 8%;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-right: 10px ;
 }
 
 .card-title {
   flex: 1;
-  padding-top: 28px !important;
-  padding-right: 10px !important;
 }
 
-.delete-box {
-  padding-top: 28px !important;
+.filter-arrow {
+  justify-content: flex-end ;
 }
 
 .filter-arrow span{
@@ -329,7 +108,145 @@ th div p {
   opacity: 1;
 }
 
-.error-box {
-  position: absolute;
-  width: 300px;
+.filter-arrow p {
+  cursor: pointer;
 }
+
+.alert-box {
+  position: absolute;
+  width: 400px;
+}
+
+.header-highlight {
+  background-color: #f7fdfe;
+  color: #61dafb;
+}
+
+/* overwriting the materialze properties */
+
+@font-face {
+  font-family: 'Muli';
+  src: url('./fonts/Mulish-Regular.ttf')format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica';
+  src: url('./fonts/HelveticaNeue.ttf')format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Muli','Helvetica', sans-serif !important;
+}
+.card {
+  margin: 0 !important;
+}
+
+.card-title {
+  margin-bottom: 0 !important;
+}
+
+input[type="text"]:not(.browser-default),
+input[type="number"]:not(.browser-default) {
+  margin: 0 !important;
+}
+
+i {
+  padding: 0 5px;
+}
+
+.search input[type="text"]:not(.browser-default) {
+  border: none !important;
+}
+
+input[type="text"]:not(.browser-default),
+input[type="number"]:not(.browser-default) {
+  border-bottom-color: black !important;
+  box-shadow: none !important;
+  padding-bottom: 2px;
+}
+
+.search input[type="text"]:not(.browser-default):focus {
+  box-shadow: none !important;
+  padding-bottom: 2px;
+}
+
+.pagination-range input[type="text"]:not(.browser-default) {
+  border: none !important;
+}
+
+.input-field {
+  margin: 0 !important;
+}
+
+.dropdown-content li span {
+  color:  black !important;
+}
+
+.btn-floating {
+  background-color: transparent !important;
+}
+
+.btn-floating:hover {
+  background-color: #eeeeee !important;
+}
+
+input[type="checkbox"].filled-in:checked + span:not(.lever)::after {
+  border-color: #61dafb;
+  background-color: #61dafb;
+}
+
+img {
+  filter: grayscale(10);
+}
+
+@media only screen and (max-width: 900px) {
+  .pagination-range {
+    width: 13%;
+    margin-right: 10px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .pagination-range {
+    width: 15%;
+    margin-right: 10px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .pagination-range {
+    width: 18%;
+    margin-right: 10px;
+  }
+}
+
+@media only screen and (max-width: 550px){
+  table {
+    width: 500px;
+  }
+  .pagination-range {
+    width: 25%;
+    margin-right: 10px;
+  }
+}
+
+@media only screen and (max-width: 410px) {
+  .pagination-range {
+    width: 25%;
+    margin-right: 10px;
+  }
+} 
+
+@media only screen and (max-width: 310px) {
+  .pagination-range {
+    width: 30%;
+    margin-right: 10px;
+  }
+}
+
+
+
