--- a/src/css/marterial-table.css
+++ b/src/css/marterial-table.css
@@ -20,8 +20,16 @@ tbody th {
   display: flex;
 }
 
+.tags-td  span  span{
+  padding-right: 8px ;
+  border-radius: 10px ;
+  margin-right: 5px ;
+}
+
 .tags-td {
-  display: flex;   
+  display: flex;  
+  width: 300px;
+  overflow-x: auto; 
 }
 
 .tags-td span {
