--- a/src/css/marterial-table.css
+++ b/src/css/marterial-table.css
@@ -312,6 +312,22 @@ input[type="checkbox"].filled-in:checked + span:not(.lever)::after {
   background-color: #61dafb;
 }
 
+input[type=number]:not(.browser-default),
+textarea.materialize-textarea {
+  border-bottom: 1px solid black !important;
+  box-shadow: #61dafb !important;
+}
+
+textarea.materialize-textarea:focus:not([readonly]),
+input[type="number"]:not(.browser-default):focus:not([readonly]) {
+  box-shadow: 0 1px 0 0 #61dafb !important;
+  border-bottom: 1px solid #61dafb !important;
+}
+
+/* input[type=number]:not(.browser-default):focus,
+textarea.materialize-textarea:focus {
+  border-bottom: #61dafb;
+} */
 
 /* notes */
 .btn-small i {
