--- a/src/components/Table/Tags.css
+++ b/src/components/Table/Tags.css
@@ -1,6 +1,5 @@
 .TagsHolder {
-  display: flex;
-  /* position: sticky; */
+  margin: 0 !important;
 }
 
 .TagDiv {
@@ -17,10 +16,11 @@
   cursor: pointer;
 }
 
-.TagCircle {
-  width: 8px;
-  height: 8px;
-  background-color: red;
-  border-radius: 50%;
-  margin-right: 5px;
+@media(max-width: 500px) {
+  .TagDiv {
+    padding: 0 3px;
+    margin: 5px 2px; 
+  }
+
+
 }
